--- a/source/_posts/2014-01-31-vistos.markdown
+++ b/source/_posts/2014-01-31-vistos.markdown
@@ -5,13 +5,14 @@ title: Vistos
 thumbnail: http://i1.ytimg.com/vi/4RadaqmXvCI/maxresdefault.jpg
 date: 2014-01-31T13:30:00-03:00
 description: Muita gente nos pergunta como lidamos com a questão dos vistos à medida que viajamos pelo mundo. Esse vídeo responde essa questão.
-keywords: visto, turismo, viagem, vídeo, vinícius teles
+keywords: visto, turismo, viagem, vídeo, vinícius teles, nômades digitais
 categories:
  - visto
  - turismo
  - viagem
  - vídeo
  - vinícius teles
+ - nômades digitais
 ---
 <div class="center">
 <iframe width="640" height="360" src="http://www.youtube.com/embed/4RadaqmXvCI" frameborder="0" allowfullscreen></iframe>
